# O-lang

./: CMakeLists.txt  CONTRIBUTING.md  FILES_INDEX.md  GETTING_STARTED.md  LICENSE.md  PRESENTATION.md  README-2.md  README-3.md  README.md  STATUS.md  channel.hpp  compose.hpp  core.hpp  logic.hpp  matrix12x8.hpp  oct8.hpp  octree.hpp  phase12.hpp  runtime.hpp  test_o_integrated.cpp
docs/: INTEGRATION.md  PHILOSOPHY.md  QUICKSTART.md  SPEC.md
examples/: basic.cpp  hello_multistate.cpp
include/o/: channels.hpp  core.hpp  functional.hpp  logic.hpp  o.hpp  operators.hpp  quantum.hpp  ranges.hpp
tests/: test_o_state.cpp
